WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152185
Refactoring to reduce potential cut-paste errors with the FTL ICs.
https://bugs.webkit.org/show_bug.cgi?id=152185
Summary
Refactoring to reduce potential cut-paste errors with the FTL ICs.
Mark Lam
Reported
2015-12-11 13:32:01 PST
Patch coming.
Attachments
proposed patch.
(40.82 KB, patch)
2015-12-11 13:49 PST
,
Mark Lam
no flags
Details
Formatted Diff
Diff
patch 2: revert unneeded part where I pushed m_name down to InlineCacheDescriptor.
(38.67 KB, patch)
2015-12-11 14:40 PST
,
Mark Lam
saam
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2015-12-11 13:49:29 PST
Created
attachment 267185
[details]
proposed patch.
WebKit Commit Bot
Comment 2
2015-12-11 13:51:00 PST
Attachment 267185
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/ftl/FTLInlineCacheDescriptor.h:92: Wrong number of spaces before statement. (expected: 12) [whitespace/indent] [4] ERROR: Source/JavaScriptCore/ftl/FTLInlineCacheDescriptor.h:150: Wrong number of spaces before statement. (expected: 12) [whitespace/indent] [4] ERROR: Source/JavaScriptCore/ftl/FTLInlineCacheDescriptor.h:243: Wrong number of spaces before statement. (expected: 12) [whitespace/indent] [4] Total errors found: 3 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Mark Lam
Comment 3
2015-12-11 14:40:33 PST
Created
attachment 267190
[details]
patch 2: revert unneeded part where I pushed m_name down to InlineCacheDescriptor.
Saam Barati
Comment 4
2015-12-11 14:59:43 PST
Comment on
attachment 267190
[details]
patch 2: revert unneeded part where I pushed m_name down to InlineCacheDescriptor. r=me
Mark Lam
Comment 5
2015-12-11 15:03:12 PST
Thanks for the review. Landed in
r193985
: <
http://trac.webkit.org/r193985
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug